// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LN - Common - DataLayer DataLayer home Deportes snapshot 1`] = `
<div>
  <script
    async=""
    data-section="/deportes"
    id="scriptDataLayerHome"
    type="text/javascript"
  />
</div>
`;

exports[`LN - Common - DataLayer DataLayer nota recetas snapshot 1`] = `
<div>
  <script
    async=""
    data-id="/deportes"
    data-page-type="nota"
    data-page-type-text="nota"
    data-subtype="{\\"id\\":\\"7\\",\\"nombre\\":\\"Receta\\"}"
    data-valor="comun"
    id="scriptDataLayerNota"
    type="text/javascript"
  />
</div>
`;
